enhance: adding support for specifying cache-config-file
closes #26458

Signed-off-by: Steve Hawkins <shawkins@redhat.com>